--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,9 @@ python_files = "*.py"
 profile = "black"
 lines_between_sections = 0
 
+[tool.mypy]
+check_untyped_defs = true
+
 [[tool.mypy.overrides]]
 module = "serial_asyncio"
 ignore_missing_imports = true
